MJ 23/11/2005
- Fixed a bug in GraphStats found by Spyros: it now handles partitioned
  graphs correctly
- Fixed the same bug in BallExpansion as well
- Changed the classdocs of GraphStats that incorrectly stated that
  it prints IncrementalStats.toString instead of just the average

AM 22/11/2005
- Corrected a bug in RangeSimulator, pointed out by Spyros
  (problems with jvm.options parameter)

AM 11/11/2005
VERSION 1.0 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

AM 11/11/2005
- Fixed a bug identified by Gian Paolo, using his suggestion; 
  the unqualified classname search in jar files was not working 
  under Windows, because files in Jar files are '/'-separated, 
  independently from the platform.

GJ 10/11/05
- Fixed a bug in BasicBalance: did not work it quota != 0
- Refreshed LBObsever.

GJ 9/11/05
- Refactored hot example package. Many features (e.g.,in-degree) are now 
  obtained using standard peersim components. See the config-file.
- Any Linkable protocol can be initialized by the HOT topology.
- RobustenessEvaluator removed, use RandRemoval instead.
- InetNodeProtocol renamed to: InetCoordinates.

AM 08/11/05
- Fixed a bug in ClassFinder (a problem with file separator in 
  Windows). 

MJ 07/11/05
- Initial (unfinished) refactoring of examples.hot. To be completed soon.

GJ 06/11/05
- Added printing of timestamp too in AverageObserver and QuotaObserver.
- Refreshed config files.

AM 04/11/05
- Fixed a bug in Configuration (the class was uncorrectly
  evaluating mixed integer-floating point expressions).

MJ 04/11/05
- Refreshed example.aggregation and related stuff. 
- Refreshed example.loadbalance and related stuff. 

MJ 02/11/05
- Fixed a bug in the Tarjan algorithm that detects strongly connected 
  components.

AM 30/10/05
- RangeSimulator, again. While testing, I discovered a race
  condition that could generate an IOException. Detected and